Update default font

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 * {
     background-color: white;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .text-container {
